--- a/login/login.html
+++ b/login/login.html
@@ -1,33 +1,42 @@
 <?php
-include ('profileset.php');
-?>
+session_start();
 
+
+if (isset($_SESSION['token'])) {
+  // Obtém o ID do usuário da sessão
+  $idUser = $_SESSION['token'];
+} else{
+  $idUser = '';
+
+}
+?>
 
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../perfil/profile.css">
-<link rel="stylesheet" href="/index.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect"
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-    rel="stylesheet">
-  <title>Usuario</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Suplementos Fitness</title>
+    <link rel="stylesheet" href="../home/index.css">
+    <link rel="stylesheet" href="/login/login.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet">
 </head>
+
 <body>
 <header>
     <nav class="navbar navbar-expand-lg coloriz">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.php"><img src="../img/Group 5.svg" alt="Logo" class="imglogo"></a>
+        <a class="navbar-brand" href="../home/index.php"><img src="../img/Group 5.svg" alt="Logo" class="imglogo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -35,7 +44,7 @@ include ('profileset.php');
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav justify-content-end spaces">
             <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="/index.php">Inicio</a>
+              <a class="nav-link " aria-current="page" href="../home/index.php">Inicio</a>
             </li>
             <?php if ($idUser != '') { ?>
             <li class="nav-item">
@@ -89,27 +98,17 @@ include ('profileset.php');
         </div>
       </div>
     </nav>
-  </header>
-  <section>
-    <div class="cardUser">
-      <div class="cartaoUser">
-        <div class="photo">
-          <img src="../img/account.png" alt="" class="fotoPerfil">
-        </div>
-        <div class="nomeProfile">
-    <h1><?php echo $nome; ?></h1>
-    <p><?php echo "Cliente desde: "; echo $data; ?> </p>
-    <h2><span class="fColor">Idade: </span><span class="idColor"><?php echo $idade; ?></span></h2>
-    <h2><span class="fColor">CPF: </span><span class="idColor"><?php echo $cpf; ?> </h2>
-    <h2><span class="fColor">Telefone: </span><span class="idColor"><?php echo $telefone; ?> </h2>
-    <h2><span class="fColor">Email: </span><span class="idColor"><?php echo $email; ?> </h2>
-    <h3>REGISTRO DE COMPRAS: R$ 330 </h3>
-        </div>
+  </header>    <div class="login-container" style="padding-top: 70px;">
+    <form action="../login/verifica.php" method="POST" class="login-form">
+    <h2>Login</h2>
+    <label for="email">Email</label><br><br>
+    <input type="text" id="email" name="email" placeholder="Email" required><br>
+    <label for="senha">Senha</label><br><br>
+    <input type="password" id="senha" name="senha" placeholder="Senha" required><br><br>
+    <button type="submit">Entrar</button>
+</form>
 
-
-      </div>
     </div>
-  </section>
 </body>
-
 </html>
+
